# X3-LLVM

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml
docs/: README.md  functions.md  primitives.md  types.md  variables.md
samples/: type.lang
src/: main.cpp
src/include/: AST.hpp  Generator.hpp  Parser.hpp  Rules.hpp
